Harden SIMD worldgen startup gating and safe fallbacks